Blog Preview Live

--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Frontend Mentor | Blog preview card</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -21,20 +18,29 @@
 <body>
   <div class="container">
     <div class="card">
-      <div class="image">
-        <img src="/images/image-qr-code.png" alt="" >
-      </div>
-     <div class="header">
-       <h1>Improve your front-end <br> skills by building projects</h1>
-     </div>
-     <div class="note">
-       <p> Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
-     </div>
+      <img src="./assets/images/illustration-article.svg">
+ <div class="category">
+   <h1>Learning</h1>
+ </div>
+ <div class="publishdate">
+ <p> Published 21 Dec 2023</p>
+ </div>
+<div class="title">
+  <h1><a href="#"> HTML & CSS foundations</a></h1>
+</div>
+<div class="description">
+  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+</div>
+<div class="author">
+  <img src="./assets/images/image-avatar.webp" alt="">
+ <h1> Greg Hooper</h1>
+</div>
     </div>
-  </div>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">TechgirlTega</a>.
+  </div>
   </div>
 </body>
 </html>
