--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="card">
       <div class="image">
-        <img src="/avatar-jessica.jpeg alt="">
+        <img src="avatar-jessica.jpeg"  alt="">
       </div>
       <div class="name">
         <h2>Jessica Randall</h2>
