--- a/index.html
+++ b/index.html
@@ -1,116 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-       <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap" rel="stylesheet">
-       <link rel="stylesheet" href="style.css">
-  
-     <title>Frontend Mentor | Recipe page</title>
-
-     <style>
-       .attribution { font-size: 11px; text-align: center; }
-        attribution a { color: hsl(228, 45%, 44%); }
-     </style>
-     
-    </head>
-    <body>
-   <div class="container">
-   <div class="card">
-     <img src="./assets/images/image-omelette.jpeg" alt="">
-     <div class="recipe">
-       <h1> Simple Omelette Recipe</h1>
-     </div>
-     <div class="description">
-       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs<br>cooked 
-        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-       </p>
-     </div>
-     <div class="preptime">
-        <h2>Preparation time</h2>
-        <ul>
-          <li><strong>Total:</strong>  Approximately 10 minutes</li>
-          <li><strong>Preparation:</strong> 5 minutes</li>
-          <li><strong>Cooking:</strong> 5 minutes</li>
-       </ul>
-     </div>
-     <div class="ingredients">
-       <h2>Ingredients</h2>
-        <ul>
-         <li>2-3 large eggs</li>
-         <li>Salt, to taste</li>
-         <li>Pepper, to taste</li>
-         <li>1 tablespoon of butter or oil</li>
-         <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
-      </div>
-     <div class="instructions">
-       <h2>Instructions</h2>
-        <div class="item">
-         <div class="num"><strong>1.</strong></div>
-          <p><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are <br>well mixed. 
-          You can add a tablespoon of water or milk for a fluffier texture.</p>
-       </div>
-        <div class="item">
-          <div class="num"><strong>2.</strong></div>
-          <p><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</p>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <title>Frontend Mentor | Product preview card component</title>
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+        <div class="image">
+          <img src="./images/image-product-desktop.jpg" alt="">
         </div>
-        <div class="item">
-          <div class="num"><strong>3.</strong></div>
-        <p><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the<br> pan to ensure 
-          the eggs evenly coat the surface.</p>
-        </div>
-        <div class="item">
-          <div class="num"><strong>4.</strong></div>
-        <p><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly <br>runny in the 
-          middle, sprinkle your chosen fillings over one half of the omelette.
-        </p>
-        </div>
-        <div class="item">
-        <div class="num"><strong>5.</strong></div>
-        <p><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it <br>over the 
-          fillings. Let it cook for another minute, then slide it onto a plate.</p>
-        </div>
-        <div class="item">
-        <div class="num"><strong>6.</strong></div>
-        <p><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</p>
-        </div>
-
-      </div>
-      <div class="nutrition">
-        <h2>Nutrition</h2>
-        <div class="description">
-        <p>The table below shows nutritional values per serving without the additional fillings.
-        </p>
-        </div>
-        <div class="table">
-          <div class="item">
-            <p> Calories</p>
-            <p class="amount"> 277kcal</p>
-          </div>
-          <div class="item">
-            <p>Carbs</p>
-            <p class="amount"> 0g</p>
-          </div>
-          <div class="item">
-            <p> Protein</p>
-            <p class="amount">20g</p>
-          </div>
-          <div class="item">
-            <p>Fat</p>
-            <p class="amount">22g</p>
+        <div class="content">
+          <h2>PERFUME</h2>
+          <h3>Gabrielle Essence Eau De Parfum</h3>
+          <p> A floral, solar and voluptuous interpretation composed by Olivier Polge,Perfumer-Creator for the House of CHANEL.</p>
+             <div class="num">
+               <h4 class="discount"> $149.99</h4>
+               <h5 class="price">$169.99</h5>
+             </div>
+          <div class="cart">
+            <div class="button">
+             <img src="./images/icon-cart.svg" alt="">
+             <h5> Add to Cart</h5>
+            </div>
           </div>
         </div>
       </div>
+    </div>
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">TechgirlTega</a>.
-  </div>
-</div>
 </body>
 </html>
